<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/new_water_capacity"
    android:layout_width="328dp"
    android:layout_height="402dp"
    android:background="@color/white">

    <TextView
        android:id="@+id/capacity_title"
        android:layout_width="wrap_content"
        android:layout_height="26dp"
        android:layout_gravity="left"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:textColor="@color/water"
        android:textSize="20sp"
        android:text="@string/capacity_title" />

    <EditText
        android:id="@+id/edit_capacity_title"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="58dp"
        android:inputType="text"
        android:textColor="@color/grey2"
        android:text="@string/edit_capacity_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="68dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="118dp"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/Choose_icon"
                android:textSize="18sp"
                android:textColor="@color/grey5"/>

            <android.support.v4.view.ViewPager
                android:id="@+id/my_pager"
                android:layout_width="match_parent"
                android:layout_height="132dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="35dp"
                android:overScrollMode="never" />

            <com.khavronsky.bottle.MyCustomViews.CirclesSlideIndicator
                android:id="@+id/circlesSlideIndicator"
                android:layout_width="wrap_content"
                android:layout_height="8dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="188dp"
                app:defaultColor="#ced1d6"
                app:focusedColor="#95dffa"
                app:margin="24dp"
                app:radius="4dp" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/choose_capacity"
                android:textSize="18sp"
                android:textColor="@color/grey5"/>
            <NumberPicker
                android:id="@+id/numberPicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:layout_gravity="center_horizontal"
                android:width="100dp" />

        </FrameLayout>
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="350dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/button_del"
            android:layout_gravity="left"
            android:padding="8dp"
            android:text="@string/delete"
            android:textColor="@color/food" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/button_cancel"
            android:layout_gravity="center_horizontal"
            android:padding="8dp"
            android:text="@string/Cancel"
            android:textColor="@color/water" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/button_save"
            android:layout_gravity="right"
            android:padding="8dp"
            android:text="@string/Save"
            android:textColor="@color/water" />


    </FrameLayout>
</android.support.v7.widget.CardView>